--- a/src/pages/myStory.scss
+++ b/src/pages/myStory.scss
@@ -142,8 +142,8 @@
 
       img {
         margin-left: 20px;
-        width: 46px;
-        height: fit-content;
+        width: 44px;
+        object-fit: contain;
         align-self: center;
         position: relative;
         left: 0;
